--- a/presentations/index.html
+++ b/presentations/index.html
@@ -118,6 +118,7 @@ Hacking &hellip;">
 <li><p><strong><a href="http://www.slideshare.net/grugq/mobile-opsec">Click and Dragger: Denial and Deception on Android</a></strong> 2014
   <a href="http://www.youtube.com/watch?v=1qfbqbhT7qc">Video</a></p></li>
 <li><p><strong><a href="COMSEC%20beyond%20encryption.pdf">COMSEC: Beyond Encryption</a></strong> 2014 (with Ben Nagy)</p></li>
+    <li><p><strong><a href="comae-blackhat-year-of-the-worm.pdf">The Triple A Threat</a></strong> 2017 (BlackHat Webcast, 30m talk)</p></li>
 </ul>
 
 
