adding link to a short course on cyber war

--- a/presentations/index.html
+++ b/presentations/index.html
@@ -131,6 +131,8 @@ Hacking &hellip;">
 
 <li><p><strong><a href="comae-blackhat-year-of-the-worm.pdf">The Triple A Threat</a></strong> 2017 (BlackHat Webcast, 30m talk)</p></li>
     
+<li><p><strong><a href="short%20course.pdf">A Short Course on Cyber War</a></strong> 2018 (BlackHat Asia Keynote)</p></li>
+
 </ul>
 
 
